--- a/src/css/page.less
+++ b/src/css/page.less
@@ -5,7 +5,8 @@ body {
   color: white;
   font-size: 18px;
   font-family: Georgia, serif;
-  padding: 5px;
+  padding: 8px;
+  margin: 0;
 }
 
 .headline {
@@ -55,8 +56,9 @@ body {
 }
 
 section.body {
-  width: @body;
+  width: @desktop-body;
   float: left;
+  padding-right: 10px;
 
   ul.cards {
     width: 100%;
@@ -68,7 +70,7 @@ section.body {
 
     li {
       display: inline-block;
-      font-size: 16px;
+      font-size: 14px;
 
       &.card {
         background-color: @seaGreen;
@@ -94,6 +96,14 @@ section.body {
         }
       }
     }
+  }
+
+  @media @landscape {
+    width: @landscape-body;
+  }
+
+  @media @tablet {
+    width: 100%;
   }
 }
 
