--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -13,5 +13,6 @@
 @block: 'Oswald', sans-serif;
 
 // DISPLAY WIDTHS
-@body: 75%;
-@ad: 25%;
+@desktop-body: 70%;
+@landscape-body: 60%;
+@mobile-body: 100%;
